tests/baselines/reference/contextuallyTypedStringLiteralsInJsxAttributes02.errors.txt
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(27,24): error TS2322: Type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
  Type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }' is not assignable to type 'LinkProps'.
    Property 'goTo' is missing in type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(28,24): error TS2322: Type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
  Type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }' is not assignable to type 'LinkProps'.
    Property 'goTo' is missing in type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(29,43): error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(30,36): error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(33,65): error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & ButtonProps'.
tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx(36,44): error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.


==== tests/cases/conformance/types/contextualTypes/jsxAttributes/file.tsx (6 errors) ====
    import React = require('react')
    
    export interface ClickableProps {
        children?: string;
        className?: string;
    }
    
    export interface ButtonProps extends ClickableProps {
        onClick: (k: "left" | "right") => void;
    }
    
    export interface LinkProps extends ClickableProps {
        goTo: "home" | "contact";
    }
    
    export function MainButton(buttonProps: ButtonProps): JSX.Element;
    export function MainButton(linkProps: LinkProps): JSX.Element;
    export function MainButton(props: ButtonProps | LinkProps): JSX.Element {
        const linkProps = props as LinkProps;
        if(linkProps.goTo) {
            return this._buildMainLink(props);
        }
    
        return this._buildMainButton(props);
    }
    
    const b0 = <MainButton {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type "left" | "right"
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2322:   Type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }' is not assignable to type 'LinkProps'.
!!! error TS2322:     Property 'goTo' is missing in type '{ extra: 为真; onClick: (k: "left" | "right") => 无值; }'.
    const b2 = <MainButton onClick={(k)=>{console.log(k)}} extra />;  // k has type "left" | "right"
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }' is not assignable to type 'IntrinsicAttributes & LinkProps'.
!!! error TS2322:   Type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }' is not assignable to type 'LinkProps'.
!!! error TS2322:     Property 'goTo' is missing in type '{ onClick: (k: "left" | "right") => 无值; extra: 为真; }'.
    const b3 = <MainButton {...{goTo:"home"}} extra />;  // goTo has type"home" | "contact"
                                              ~~~~~
!!! error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
    const b4 = <MainButton goTo="home" extra />;  // goTo has type "home" | "contact"
                                       ~~~~~
!!! error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
    
    export function NoOverload(buttonProps: ButtonProps): JSX.Element { return undefined }
    const c1 = <NoOverload  {...{onClick: (k) => {console.log(k)}}} extra />;  // k has type any
                                                                    ~~~~~
!!! error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & ButtonProps'.
    
    export function NoOverload1(linkProps: LinkProps): JSX.Element { return undefined }
    const d1 = <NoOverload1 {...{goTo:"home"}} extra  />;  // goTo has type "home" | "contact"
                                               ~~~~~
!!! error TS2339: Property 'extra' does not exist on type 'IntrinsicAttributes & LinkProps'.
    